--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </ion-header-bar>
 
     <ion-content>
-      <div class="list">
-        <a class="item item-icon-right" ng-repeat="build in builds | reverse | filter:filter track by build.$id"
-           ui-sref="show({id: build.$id})"
-           ui-sref-active="active">
-          <h3>{{build.repository.name}}/{{build.branch}}</h3>
-          <small>{{build.commit.message}} {{build.commit.author.name}}</small>
+      <ion-list>
+        <ion-item class="item-icon-right" ng-class="{assertive: build.status == 'failed'}"
+                  ng-repeat="build in builds | reverse | filter:filter track by build.$id"
+                  ui-sref="show({id: build.$id})" ui-sref-active="active">
+          <h2>{{build.repository.name}}/{{build.branch}}</h2>
+          {{build.commit.message}}
           <i class="icon" ng-class="statusIcon(build.status)" ng-if="build.status"></i>
-        </a>
-      </div>
+        </ion-item>
+      </ion-list>
     </ion-content>
     <ion-footer-bar>
       <h1 class="title">{{pushes.length}} pending</h1>
