Enable html5 mode

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <script src="//cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
   <script src="//cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 
-  <link href="stylesheets/application.css" rel="stylesheet">
-  <script src="javascripts/ansi_to_html.js"></script>
-  <script src="javascripts/application.js"></script>
+  <link href="/stylesheets/application.css" rel="stylesheet">
+  <script src="/javascripts/ansi_to_html.js"></script>
+  <script src="/javascripts/application.js"></script>
 </head>
 
 <body ng-controller="BuildsCtrl">
