--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ui-view></ui-view>
   </ion-side-menu-content>
 
-  <ion-side-menu expose-aside-when="large">
+  <ion-side-menu expose-aside-when="large" width="320">
     <ion-header-bar class="item-input-inset">
       <label class="item-input-wrapper">
         <i class="icon ion-search placeholder-icon"></i>
@@ -30,12 +30,13 @@
 
     <ion-content>
       <ion-list show-delete="isDeleting">
-        <ion-item class="item-icon-right" ng-class="{assertive: build.status == 'failed'}"
+        <ion-item menu-close class="item-avatar item-icon-right" ng-class="{assertive: build.status == 'failed'}"
                   ng-repeat="build in builds | reverse | filter:filter track by build.$id"
                   ui-sref="show({id: build.$id})" ui-sref-active="active">
           <ion-delete-button class="ion-minus-circled" ng-click="remove(build)"></ion-delete-button>
-          <h2>{{build.repository.name}}/{{build.branch}}</h2>
-          {{build.commit.message}}
+          <img ng-src="https://avatars.githubusercontent.com/{{build.commit.author.username}}"/>
+          <h2>{{build.commit.message}}</h2>
+          <p>{{build.branch}}</p>
           <i class="icon" ng-class="statusIcon(build.status)" ng-if="build.status"></i>
         </ion-item>
       </ion-list>
