--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title>Hawkins</title>
-  <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-  <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+  <link href="//cdnjs.cloudflare.com/ajax/libs/ionic/1.0.0-beta.14/css/ionic.min.css" rel="stylesheet">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ionic/1.0.0-beta.14/js/ionic.bundle.min.js"></script>
   <script src="//cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
   <script src="//cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 
