Allow to delete queued pushes

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
       <ion-list show-delete="isDeleting">
         <div class="item item-divider" ng-if="pushes.length">Queue</div>
         <ion-item menu-close class="item-avatar item-icon-right" ng-repeat="push in pushes | reverse | filter:filter">
+          <ion-delete-button class="ion-minus-circled" ng-click="removePush(push)"></ion-delete-button>
           <img ng-src="https://avatars.githubusercontent.com/{{::push.head_commit.author.username}}"/>
           <h2>{{::push.head_commit.message}}</h2>
           <p>{{::push.ref | branch}}</p>
         </ion-item>
         <div class="item item-divider" ng-if="builds.length">Builds</div>
+
         <ion-item menu-close class="item-avatar item-icon-right" ng-class="{assertive: build.status == 'failed'}"
                   ng-repeat="build in builds | reverse | filter:filter track by build.$id"
                   ui-sref="show({id: build.$id})" ui-sref-active="active">
@@ -47,7 +49,6 @@
           <p>{{::build.push.ref | branch}}</p>
           <i class="icon" ng-class="statusIcon(build.status)" ng-if="build.status"></i>
         </ion-item>
-
       </ion-list>
     </ion-content>
 
