--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </ion-content>
 
     <ion-footer-bar>
-      <button class="button button-icon icon ion-ios7-minus-outline" ng-click="isDeleting = !isDeleting"></button>
+      <button class="button button-icon icon ion-ios-minus-outline" ng-click="isDeleting = !isDeleting"></button>
     </ion-footer-bar>
   </ion-side-menu>
 </ion-side-menus>
